[tool.poetry]
name = "python_color_transfer"
version = "0.1.0a"
description = "Three methods of color transfer implemented in python."
authors = ["pengbo-learn"]
license = "MIT"
readme = "README.md"
include=['imgs']

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.2"
numpy = "^1.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
